--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@
     /* DEBUG:  */
     /* border: 1px solid black;
     padding: 5px; */
-
 }
 .container {
     display: flex;
     margin: 0 auto;
-    width: 70%;
+    max-width: 900px;
     height: 100vh;
 }
 .slider-wrapper {
@@ -26,12 +25,13 @@
     width: calc(100% - 70px);
     height: 100%;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 .slider-wrapper .images .my-img-box {
     display: none;
-    width: auto;
+    max-width: 800px;
     height: 100%;
-    /* display: flex; */
     align-items: center;
     justify-content: center;
     overflow: hidden;
@@ -45,6 +45,8 @@
 }
 .slider-wrapper .images .my-img-box.active {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .prev, .next {
     position: absolute;
@@ -60,17 +62,22 @@
     right: 0;
 }
 .nav {
+  min-width: 230px;
     position: absolute;
     left: 50%;
     bottom: 20px;
     transform: translateX(-50%);
-    padding: 20px;
+    padding: 10px;
     border-radius: 999px;
     background: rgba(0,0,0,.7);
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .nav > i {
     margin: 0 20px;
+    font-size: 9px;
 }
 .nav > i.active {
     color: blue;
